# folderistic

./: .gitignore  Dockerfile  Makefile  README.md  add_user.py  compose.yaml  mypy.ini  pyproject.toml
src/: __init__.py  db.py  delete.sql  initialize_telemetry.py  model.py  start.sql  types.sql
src/middlewares/: __init__.py  auth.py
src/models/: __init__.py
src/views/: __init__.py  about.py  accessing_file.py  failed_auth.py  folder.py  index.py  login.py  track_users.py  utils.py
tools/: Makefile  Tools.lnk  add_user.py  bulk_new_users.py  change_password.py  delete_user.py  remove_folder.py  reset_user_auth.py
