[tool.poetry]
name = "folderistic"
version = "0.1.0"
description = ""
authors = ["timelessnesses <timelessnesses@timelessnesses.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
orjson = "^3.9.14"
nicegui = "^1.4.15"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.1"
asyncpg-stubs = "^0.29.1"
psutil = "^5.9.8"
humanize = "^4.9.0"
prometheus-fastapi-instrumentator = "^6.1.0"
prometheus-client = "^0.20.0"
starlette-exporter = "^0.21.0"
gc-prometheus = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
