[tool.poetry]
name = "folderistic"
version = "0.1.0"
description = ""
authors = ["timelessnesses <timelessnesses@timelessnesses.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
orjson = "^3.9.15"
nicegui = "^1.4.22"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.1"
asyncpg-stubs = "^0.29.1"
psutil = "^5.9.8"
humanize = "^4.9.0"
prometheus-fastapi-instrumentator = "^7.0.0"
prometheus-client = "^0.20.0"
starlette-exporter = "^0.21.0"
gc-prometheus = "^0.1.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
